<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating" 
        android:textSize="20dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:stepSize="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comments"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/commentstext"
        android:layout_width="match_parent"
        android:layout_height="310dp" 
        android:inputType="textMultiLine" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" 
        android:layout_gravity="center"
        android:onClick="submitRatingComments"/>

</LinearLayout>